--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "framework-arduinoespressif8266",
     "description": "Arduino Wiring-based Framework (ESP8266 Core)",
-    "url": "https://github.com/esp8266/Arduino",
-    "version": "3.1.0-dev.git80bf7166"
+    "homepage": "https://github.com/esp8266/Arduino",
+    "version": "3.1.0-dev.git80bf7166",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/esp8266/Arduino"
+    }
 }
