--- a/.github/workflows/esp82xx-nonos-linklayer.yml
+++ b/.github/workflows/esp82xx-nonos-linklayer.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: deploy
     steps:
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: |
             esp8266/tools/dist
@@ -39,7 +39,7 @@ jobs:
         run: |
           mkdir ${HOME}/.ssh
 
-          cat "${SSH_DEPLOY_KEY}" > ${HOME}/.ssh/deploy_key
+          echo -n "${SSH_DEPLOY_KEY}" > ${HOME}/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
 
           echo -ne "Host github.com\n\tHostname github.com\n\tIdentityFile ~/.ssh/deploy_key\n" > \
