actions build test

--- a/tests/host/Makefile
+++ b/tests/host/Makefile
@@ -194,6 +194,9 @@ FLAGS += -fstack-protector-all
 FLAGS += -DHTTPCLIENT_1_1_COMPATIBLE=0
 FLAGS += -DLWIP_IPV6=0
 FLAGS += -DHOST_MOCK=1
+FLAGS += -DHAVE_STRLCPY
+FLAGS += -DHAVE_STRLCAT
+FLAGS += -DHAVE_NONISO
 FLAGS += -DNONOSDK221=1
 FLAGS += -DF_CPU=80000000
 FLAGS += $(MKFLAGS)
