--- a/tests/host/Makefile
+++ b/tests/host/Makefile
@@ -51,28 +51,6 @@ endif
 OUTPUT_BINARY := $(BINDIR)/host_tests
 LCOV_DIRECTORY := $(BINDIR)/../lcov
 
-# Core files sometimes override libc functions, check when necessary to hide them
-# TODO proper configure script / other build system?
-ifeq (,$(wildcard ./.have_strlcpy))
-$(shell echo -e '#include <cstring>\nint main(){char a[4]; char b[4]; strlcpy(&a[0], &b[0], sizeof(a)); return 0;}' | \
-	$(CXX) -x c++ - -o .have_strlcpy 2>/dev/null || { echo -e '#!/bin/sh\nexit 1' > .have_strlcpy ; chmod +x .have_strlcpy; })
-endif
-
-$(shell ./.have_strlcpy)
-ifeq ($(.SHELLSTATUS), 0)
-FLAGS += -DHAVE_STRLCPY
-endif
-
-ifeq (,$(wildcard ./.have_strlcat))
-$(shell echo -e '#include <cstring>\nint main(){char a[4]; strlcat(&a[0], "test", sizeof(a)); return 0;}' | \
-	$(CXX) -x c++ - -o .have_strlcat 2>/dev/null || { echo -e '#!/bin/sh\nexit 1' > .have_strlcat ; chmod +x .have_strlcat; })
-endif
-
-$(shell ./.have_strlcat)
-ifeq ($(.SHELLSTATUS), 0)
-FLAGS += -DHAVE_STRLCAT
-endif
-
 # Hide full build commands by default
 ifeq ($(V), 0)
 VERBC   = @echo "C   $@";
@@ -89,6 +67,30 @@ VERBRANLIB =
 endif
 
 $(shell mkdir -p $(BINDIR))
+
+# Core files sometimes override libc functions, check when necessary to hide them
+# TODO proper configure script / other build system?
+ifeq (,$(wildcard $(BINDIR)/.have_strlcpy))
+$(shell echo -e '#include <cstring>\nint main(){char a[4]; char b[4]; strlcpy(&a[0], &b[0], sizeof(a)); return 0;}' | \
+	$(CXX) -x c++ - -o $(BINDIR)/.have_strlcpy 2>/dev/null || { echo -e '#!/bin/sh\nexit 1' > $(BINDIR)/.have_strlcpy ; chmod +x $(BINDIR)/.have_strlcpy; })
+endif
+
+$(shell $(BINDIR)/.have_strlcpy)
+ifeq ($(.SHELLSTATUS), 0)
+FLAGS += -DHAVE_STRLCPY
+endif
+
+ifeq (,$(wildcard $(BINDIR)/.have_strlcat))
+$(shell echo -e '#include <cstring>\nint main(){char a[4]; strlcat(&a[0], "test", sizeof(a)); return 0;}' | \
+	$(CXX) -x c++ - -o $(BINDIR)/.have_strlcat 2>/dev/null || { echo -e '#!/bin/sh\nexit 1' > $(BINDIR)/.have_strlcat ; chmod +x $(BINDIR)/.have_strlcat; })
+endif
+
+$(shell $(BINDIR)/.have_strlcat)
+ifeq ($(.SHELLSTATUS), 0)
+FLAGS += -DHAVE_STRLCAT
+endif
+
+# Actual build recipes
 
 CORE_CPP_FILES := \
 	$(addprefix $(abspath $(CORE_PATH))/,\
