--- a/tests/host/Makefile
+++ b/tests/host/Makefile
@@ -71,7 +71,7 @@ $(shell mkdir -p $(BINDIR))
 # Core files sometimes override libc functions, check when necessary to hide them
 # TODO proper configure script / other build system?
 ifeq (,$(wildcard $(BINDIR)/.have_strlcpy))
-$(shell echo -e '#include <cstring>\nint main(){char a[4]; char b[4]; strlcpy(&a[0], &b[0], sizeof(a)); return 0;}' | \
+$(shell echo -e '#include <cstring>\nint main(){char a[4]{}; char b[4]{}; strlcpy(&a[0], &b[0], sizeof(a)); return 0;}' | \
 	$(CXX) -x c++ - -o $(BINDIR)/.have_strlcpy 2>/dev/null || { echo -e '#!/bin/sh\nexit 1' > $(BINDIR)/.have_strlcpy ; chmod +x $(BINDIR)/.have_strlcpy; })
 endif
 
@@ -81,7 +81,7 @@ FLAGS += -DHAVE_STRLCPY
 endif
 
 ifeq (,$(wildcard $(BINDIR)/.have_strlcat))
-$(shell echo -e '#include <cstring>\nint main(){char a[4]; strlcat(&a[0], "test", sizeof(a)); return 0;}' | \
+$(shell echo -e '#include <cstring>\nint main(){char a[4]{}; strlcat(&a[0], "test", sizeof(a)); return 0;}' | \
 	$(CXX) -x c++ - -o $(BINDIR)/.have_strlcat 2>/dev/null || { echo -e '#!/bin/sh\nexit 1' > $(BINDIR)/.have_strlcat ; chmod +x $(BINDIR)/.have_strlcat; })
 endif
 
