--- a/.github/workflows/bearssl.yml
+++ b/.github/workflows/bearssl.yml
@@ -51,7 +51,6 @@ jobs:
         run: |
           pushd esp8266/tools
           python get.py -q
-          echo "$(readlink -f xtensa-lx106-elf/bin)" >> $GITHUB_PATH
           popd
 
       - name: Prepare bearssl builder
@@ -70,10 +69,8 @@ jobs:
         run: |
           pushd esp8266
 
-          pushd tools/sdk/ssl/bearssl
-          make CONF=esp8266 clean
-          make CONF=esp8266
-          cp esp8266/libbearssl.a ../../lib/
+          pushd tools/sdk/ssl/
+          make install
           popd
 
           if [[ -n $(git diff --exit-code -- tools/sdk/lib/) ]]; then
